go backwards to some ideas that worked well

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -525,7 +525,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.4.6</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.5.0</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -605,20 +605,20 @@
         <div class="slider-half">
           <div class="slider-label">
             <span>Speaker Min High-shelf</span>
-            <span id="spkHighShelfMinLabel">-3 dB</span>
+            <span id="spkHighShelfMinLabel">-6 dB</span>
           </div>
           <div class="tooltip-container">
-            <input type="range" id="spkHighShelfMin" class="slider" min="-10" max="0" step="1" value="-3" style="background: linear-gradient(-90deg, #2D3748, #3B82F6);">
+            <input type="range" id="spkHighShelfMin" class="slider" min="-10" max="0" step="1" value="-6" style="background: linear-gradient(-90deg, #2D3748, #3B82F6);">
             <div class="tooltip">Speaker minimum high-shelf filter</div>
           </div>
         </div>
         <div class="slider-half">
           <div class="slider-label">
             <span>Speaker Max High-shelf</span>
-            <span id="spkHighShelfMaxLabel">3 dB</span>
+            <span id="spkHighShelfMaxLabel">6 dB</span>
           </div>
           <div class="tooltip-container">
-            <input type="range" id="spkHighShelfMax" class="slider" min="0" max="10" step="1" value="3">
+            <input type="range" id="spkHighShelfMax" class="slider" min="0" max="10" step="1" value="6">
             <div class="tooltip">Speaker maximum high-shelf filter</div>
           </div>
         </div>
@@ -2025,25 +2025,14 @@
       console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
     }
     async function updateEQTargetSettings(idx, start, end, isSub) {
-      // aggressively line up response to target curve based on weakest region of the response
       let tcLevelOffset = 0;
       if (isSub) {
-        const offsets = [];
-        offsets.push(await getSPLOffsetFromTarget(idx,                 30,                80));
-        offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 20), Math.min(end, 120)));
-        offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 20),          end      ));
-        offsets.push(await getSPLOffsetFromTarget(idx,          start,      Math.min(end, 120)));
-        offsets.push(await getSPLOffsetFromTarget(idx,          start,               end      ));
-        tcLevelOffset = Math.max(...offsets);
+        // limit to 20-120hz if bandwidth exceeds it so core LFE region is prioritized
+        tcLevelOffset = await getSPLOffsetFromTarget(idx, Math.max(start, 20), Math.min(end, 120));
       }
       else {
-        const offsets = [];
-        offsets.push(await getSPLOffsetFromTarget(idx,                 500,                2000));
-        offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 200), Math.min(end, 2000)));
-        offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 200),          end       ));
-        offsets.push(await getSPLOffsetFromTarget(idx,          start,       Math.min(end, 2000)));
-        offsets.push(await getSPLOffsetFromTarget(idx,          start,                end       ));
-        tcLevelOffset = Math.max(...offsets);
+        // get SBIR region as close to target as possible
+        tcLevelOffset = await getSPLOffsetFromTarget(idx, Math.max(start, 200), Math.min(end, 2000));
       }
       await fetchSafe('target-level', idx, 75.0 - tcLevelOffset);
       await postSafe(`${baseUrl}/${idx}/target-settings`, {
@@ -2605,10 +2594,9 @@
       const avgSPWithHPFIdx = Object.keys(avgSPWithHPF.results)[0];
       const avgSubWithLPF = await postNext('Magn plus phase average', Array.from(subWithLPFIndices));
       const avgSubWithLPFIdx = Object.keys(avgSubWithLPF.results)[0];
-      // use 0.5x and 2x of average initialXO to set evaluation range
-      const avgInitialXO = customCrossover.reduce((acc, val) => acc + val, 0) / nSpeakers;
-      const startFreq = Math.round(avgInitialXO / 2);
-      const endFreq = Math.round(avgInitialXO * 2);
+      // use 0.5x and 2x of min/max XO to set evaluation range
+      const startFreq = Math.round(minXO / 2);
+      const endFreq = Math.round(maxXO * 2);
       // set low delay limit to -2x of first IR peak difference against t=0
       // set high delay limit to 0.5x of first IR peak difference against t=0
       // note: this attempts to find the most optimal alignment that's also closest to time alignment
@@ -2726,14 +2714,14 @@
       console.log("Finalizing crossover frequencies for maximum output at MLP...");
       console.info(`Usable XO range: ${minXO}hz - ${maxXO}hz (based on subwoofer bandwidth)`);
       const mlpSWIdx = cmdIdMLPIndices[commandId[nChannels]];
+      const startFreq = Math.round(minXO / 2);
+      const endFreq = Math.round(maxXO * 2);
       for (let i = 1; i <= nSpeakers; i++) {
         // check if single channel or speaker pair
         const singleChannel = isSingleChannel(commandId[i]);
         const cmdIds = (singleChannel ? commandId[i] : `${commandId[i]} & ${commandId[i + 1]}`).padStart(9, ".");
         // use 0.5x and 2x of initialXO as evaluation range
         const initialXO = customCrossover[i];
-        const startFreq = Math.round(initialXO / 2);
-        const endFreq = Math.round(initialXO * 2);
         let bestXO = initialXO, maxSum = -Infinity;
         console.info("Starting...");
         for (let j = 0; j < freqIndex.length; j++) {
