--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2420,17 +2420,23 @@
       if (channelCmdId.includes("R") && commandId.includes(channelCmdId.replace("R", "L"))) { return false; } // where L/R is in the middle
       return true;
     }
-    function findNearestXO(freq) {
-      let xo = Infinity;
-      let minDelta = Infinity;
-      for (let i=0; i < freqIndex.length; i++) {
-        const delta = Math.abs(freqIndex[i] - freq);
-        if (delta < minDelta) {
-          minDelta = delta;
-          xo = freqIndex[i];
+    function findPrevXO(freq) {
+      freq = Math.round(freq / 10) * 10; // round to nearest 10th
+      for (let i = freqIndex.length - 1; i >= 0; i--) {
+        if (freqIndex[i] < freq) {
+          return freqIndex[i];
         }
       }
-      return xo;
+      return freqIndex.at(0);
+    }
+    function findNextXO(freq) {
+      freq = Math.round(freq / 10) * 10; // round to nearest 10th
+      for (let i = 0; i < freqIndex.length; i++) {
+        if (freq < freqIndex[i]) {
+          return freqIndex[i];
+        }
+      }
+      return freqIndex.at(-1);
     }
     async function getAbsLow3dBPoint(idx, isSub=true, start=10, end=320) {
       // finds low -3dB point from mean SPL
@@ -2512,7 +2518,7 @@
           idx = Object.keys(pairAvg.results)[0];
         }
         const rolloff = await getAbsLow3dBPoint(idx, false, 20);
-        let initialXO = findNearestXO(rolloff);
+        let initialXO = findNextXO(rolloff);
         // edge case for no subwoofer
         if (noSub && cmdIds.endsWith("FL & FR")) {
           initialXO = "L";
@@ -2541,10 +2547,10 @@
       console.log("Calculating subwoofer bandwidth...")
       // find low freq point based on max low shelf (REW) or -3dB (Audy) & set minXO
       const subLowFreq = await getAbsLow3dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
-      minXO = findNearestXO(2 * subLowFreq);
+      minXO = findNextXO(2 * subLowFreq);
       // find high freq -6dB point (since LPF is 24dB/oct) and set maxXO
       const subHighFreq = await getAbsHigh6dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
-      maxXO = findNearestXO(subHighFreq);
+      maxXO = findPrevXO(subHighFreq);
       if (minXO >= maxXO) {
         minXO = maxXO;
         console.warn(`Subwoofer has very little bandwidth and can only support ${minXO}hz crossover!`);
